[gd_scene load_steps=11 format=3 uid="uid://ceodwhqhhotug"]

[ext_resource type="Script" path="res://addons/goat/helper_scenes/InventoryItems.gd" id="1"]
[ext_resource type="StyleBox" path="res://addons/goat/styles/inventory_slot_hover.tres" id="2"]
[ext_resource type="StyleBox" path="res://addons/goat/styles/inventory_slot_pressed.tres" id="3"]
[ext_resource type="StyleBox" path="res://addons/goat/styles/inventory_slot_normal.tres" id="4"]
[ext_resource type="StyleBox" path="res://addons/goat/styles/inventory_slot_disabled.tres" id="5"]
[ext_resource type="Texture2D" uid="uid://bf23e3vb0las8" path="res://addons/goat/images/cancel_icon.png" id="7"]
[ext_resource type="Texture2D" uid="uid://2t38vrxwiv4l" path="res://addons/goat/images/item_interaction_icon.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dh6dylyle0aac" path="res://addons/goat/images/reset_rotation_icon.png" id="9"]
[ext_resource type="FontFile" uid="uid://dxkp5rfk21fkw" path="res://addons/goat/fonts/Tuffy.ttf" id="10_ha78v"]

[sub_resource type="ButtonGroup" id="ButtonGroup_ghgvf"]
resource_name = "InventoryButtons"

[node name="InventoryItems" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="EmptyInventoryText" type="Label" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_ha78v")
theme_override_font_sizes/font_size = 20
text = "There are no items in the inventory"

[node name="ItemButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Button0" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button1" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button2" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button3" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button4" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button5" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button6" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Button7" type="Button" parent="MarginContainer/ItemButtons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("3")
theme_override_styles/disabled = ExtResource("4")
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_ghgvf")
clip_text = true

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
tooltip_text = "Cancel"
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("2")
theme_override_styles/focus = ExtResource("2")
icon = ExtResource("7")
clip_text = true

[node name="UseButton" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
tooltip_text = "Use"
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("2")
theme_override_styles/disabled = ExtResource("5")
theme_override_styles/focus = ExtResource("2")
disabled = true
icon = ExtResource("8")
clip_text = true
expand_icon = true

[node name="ResetRotationButton" type="Button" parent="MarginContainer/Buttons"]
custom_minimum_size = Vector2(68, 68)
layout_mode = 2
tooltip_text = "Reset rotation"
focus_mode = 0
theme_override_styles/normal = ExtResource("4")
theme_override_styles/hover = ExtResource("2")
theme_override_styles/pressed = ExtResource("2")
theme_override_styles/disabled = ExtResource("5")
theme_override_styles/focus = ExtResource("2")
disabled = true
icon = ExtResource("9")
clip_text = true
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 10

[node name="HelpText" type="Label" parent="MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("10_ha78v")
theme_override_font_sizes/font_size = 20
text = "Press RMB to rotate. Drag and drop other items to use them on this one."
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="pressed" from="MarginContainer/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/UseButton" to="." method="_on_UseButton_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/ResetRotationButton" to="." method="_on_ResetRotationButton_pressed"]
